Reversed the roles to that the eyecam program know is the server, and the server program is the client. Ups, that should be renamed... Moved code related to sockets and all that stuff into the broadcast.{c,h} files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,5 @@
 cmake_minimum_required(VERSION 2.8)
 
 project(eyecam)
-add_executable(eyecam cam.c main.c)
+link_libraries(pthread)
+add_executable(eyecam i2c.c broadcast.c cam.c main.c)
