Renamed files. Enum of states.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ cmake_minimum_required(VERSION 2.8)
 
 project(eyecam)
 link_libraries(pthread)
-add_executable(eyecam i2c.c broadcast.c motor_ctrl.c cam.c main.c)
+add_executable(eyecam i2c.c broadcast.c motor_ctrl.c camera.c main.c)
