Logging to CSV. Floats in PID. Two center of mass points are calculated.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 
 cmake_minimum_required(VERSION 2.8)
 
+set(CMAKE_C_COMPILER   arm-rpi-linux-gnueabihf-gcc)
+set(CMAKE_CXX_COMPILER arm-rpi-linux-gnueabihf-g++)
+
 project(eyecam)
-link_libraries(pthread)
-add_executable(eyecam i2c.c broadcast.c motor_ctrl.c camera.c main.c)
+link_libraries(pthread m)
+add_executable(eyecam log.c i2c.c broadcast.c motor_ctrl.c camera.c main.c)
