Many changes - including some experimental code for positioning.

--- a/eyebot.conf
+++ b/eyebot.conf
@@ -19,14 +19,49 @@ k_constrast			= 1.0
 
 thr_enable 			= 1
 thr_upper			= 100
-thr_lower			= 120
+thr_lower			= 100
 
 ### Controller
-speed				= 50
+speed				= 40
+speed_slow			= 20
+speed_fast 			= 50
 
-k_p					= 4.0
-k_i					= -0.9
-k_d					= 50.0
+# 2.0, -0.5, 2.0
+
+k_p					= 2.0
+k_i					= -1.0
+k_d					= 20.0
 
 k_error				= 0.1
-k_error_diff		= 0.1
+k_error_diff		= 0.0
+
+### Motor
+
+#motor_enc_div		= 1
+#
+#motor_left_k_p		= 1
+#motor_left_k_d		= 0
+#
+#motor_right_k_p		= 1
+#motor_right_k_d		= 0
+
+
+### Line mass configuration
+
+mass_horizontal_lower	= 5000
+mass_horizontal_upper	= 15000
+
+mass_cross_lower		= 24000
+mass_cross_upper		= 33000
+
+mass_bypath_lower		= 20000
+mass_bypath_upper		= 22000	
+
+mass_end_lower			= 0
+mass_end_upper			= 0
+
+
+
+
+
+
