--- a/eyebot.conf
+++ b/eyebot.conf
@@ -22,18 +22,23 @@ thr_upper			= 100
 thr_lower			= 100
 
 ### Controller
-speed				= 40
-speed_slow			= 20
+speed				= 30
+speed_slow			= 25
 speed_fast 			= 50
 
-# 2.0, -0.5, 2.0
+# Working parameters with old controller
+# 2.0, -1.0, 20.0
 
 k_p					= 2.0
-k_i					= -1.0
-k_d					= 20.0
+k_i					= -0.5
+k_d					= 50.0
+
+# Scaled up parameters (not tested)
+# k_i = 30
+# k_d = 20
 
 k_error				= 0.1
-k_error_diff		= 0.0
+k_error_diff		= 0.1
 
 ### Motor
 
