--- a/eyebot.conf
+++ b/eyebot.conf
@@ -22,23 +22,27 @@ thr_upper			= 100
 thr_lower			= 100
 
 ### Controller
-speed				= 30
+speed				= 20
 speed_slow			= 25
-speed_fast 			= 50
+speed_fast 			= 40
 
 # Working parameters with old controller
 # 2.0, -1.0, 20.0
 
 k_p					= 2.0
-k_i					= -0.5
-k_d					= 50.0
+k_i					= 0.0
+k_d					= 20.0
 
-# Scaled up parameters (not tested)
+#k_p_fast			= 0.0
+#k_i_fast			= 0.0
+#k_d_fast			= 0.0
+
+# Scaled up parameters (not cdtested)
 # k_i = 30
 # k_d = 20
 
 k_error				= 0.1
-k_error_diff		= 0.1
+k_error_diff		= 0.0
 
 ### Motor
 
@@ -53,11 +57,11 @@ k_error_diff		= 0.1
 
 ### Line mass configuration
 
-mass_horizontal_lower	= 5000
-mass_horizontal_upper	= 15000
+mass_horizontal_lower	= 16000
+mass_horizontal_upper	= 25000
 
-mass_cross_lower		= 24000
-mass_cross_upper		= 33000
+mass_cross_lower		= 27000
+mass_cross_upper		= 50000
 
 mass_bypath_lower		= 20000
 mass_bypath_upper		= 22000	
