Working - whole track.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,9 @@ project(eyecam)
 link_libraries(pthread m ${CMAKE_SOURCE_DIR}/confuse-2.7/src/.libs/libconfuse.a )
 include_directories( ${CMAKE_SOURCE_DIR}/confuse-2.7/src  )
 
-add_executable(eyecam configuration.c avg_num.c log.c i2c.c ioexp.c broadcast.c motor_ctrl.c camera.c image.c main.c)
+add_executable(eyecam configuration.c avg_num.c pid.c log.c i2c.c ioexp.c broadcast.c motor_ctrl.c camera.c image.c main.c)
 add_executable(i2c_test i2c.c ioexp.c i2c_test.c)
-add_executable(dist_test i2c.c motor_ctrl.c dist_test.c)
+add_executable(dist_test i2c.c motor_ctrl.c avg_num.c dist_test.c)
+
+add_executable(go i2c.c motor_ctrl.c go.c)
+add_executable(pos i2c.c motor_ctrl.c pos.c)
