--- a/eyebot.conf
+++ b/eyebot.conf
@@ -14,24 +14,26 @@ slice_upper_end		= 40
 slice_lower_start	= 40
 slice_lower_end		= 240
 
-k_brightness		= 0.0
-k_constrast			= 1.0
+#k_brightness		= 0.0
+#k_constrast			= 1.0
 
-thr_enable 			= 1
-thr_upper			= 100
-thr_lower			= 100
+#thr_enable 			= 1
+#thr_upper			= 100
+#thr_lower			= 100
 
 ### Controller
-speed				= 20
-speed_slow			= 25
-speed_fast 			= 40
+speed_straight		= 12
+speed_slow			= 17
+speed_normal		= 25
+speed_fast 			= 35
 
 # Working parameters with old controller
 # 2.0, -1.0, 20.0
 
 k_p					= 2.0
 k_i					= 0.0
-k_d					= 20.0
+k_d					= 25.0
+#k_d = 60
 
 #k_p_fast			= 0.0
 #k_i_fast			= 0.0
@@ -54,10 +56,30 @@ k_error_diff		= 0.0
 #motor_right_k_p		= 1
 #motor_right_k_d		= 0
 
+#
+# Follow wall
+#
 
-### Line mass configuration
+#w_k_p				= 0.25
+#w_k_i				= 0.1
+#w_k_d				= 20.0
 
-mass_horizontal_lower	= 16000
+w_k_p				= 2.0
+w_k_i				= 0.0
+w_k_d				= 0.0
+
+w_diff_p			= 4.0
+
+w_max_sum_error		= 10
+w_setpoint			= 12	
+w_speed				= 12
+w_max_error			= 8
+
+#
+# Line mass configuration
+#
+
+mass_horizontal_lower	= 13000
 mass_horizontal_upper	= 25000
 
 mass_cross_lower		= 27000
