--- a/eyebot.conf
+++ b/eyebot.conf
@@ -24,20 +24,20 @@ slice_lower_end		= 240
 ### Controller
 speed_straight		= 12
 speed_slow			= 17
-speed_normal		= 25
-speed_fast 			= 35
+speed_normal		= 20
+speed_fast 			= 25
 
 # Working parameters with old controller
 # 2.0, -1.0, 20.0
 
 k_p					= 2.0
-k_i					= 0.0
+k_i					= -1.0
 k_d					= 25.0
 #k_d = 60
 
-#k_p_fast			= 0.0
-#k_i_fast			= 0.0
-#k_d_fast			= 0.0
+k_p_fast			= 2.0
+k_i_fast			= 0.0
+k_d_fast			= 30.0
 
 # Scaled up parameters (not cdtested)
 # k_i = 30
