--- a/eyebot.conf
+++ b/eyebot.conf
@@ -22,9 +22,9 @@ slice_lower_end		= 240
 #thr_lower			= 100
 
 ### Controller
-speed_straight		= 12
-speed_slow			= 17
-speed_normal		= 20
+speed_straight		= 8
+speed_slow			= 15
+speed_normal		= 10
 speed_fast 			= 25
 
 # Working parameters with old controller
@@ -32,14 +32,13 @@ speed_fast 			= 25
 
 k_p					= 2.0
 k_i					= -1.0
-k_d					= 25.0
-#k_d = 60
+k_d					= 20.0
 
 k_p_fast			= 2.0
 k_i_fast			= 0.0
 k_d_fast			= 30.0
 
-# Scaled up parameters (not cdtested)
+# Scaled up parameters (not tested)
 # k_i = 30
 # k_d = 20
 
@@ -90,6 +89,21 @@ mass_bypath_upper		= 22000
 
 mass_end_lower			= 0
 mass_end_upper			= 0
+
+#
+# Distance limits
+#
+
+dist_15_lower			= 14
+dist_15_upper			= 17
+
+dist_20_lower			= 17
+dist_20_upper			= 21
+
+dist_side_disappear_1	= 14
+dist_side_disappear_2	= 20
+
+
 
 
 
